bear-blog/main/default/objects/Account/fields/Founded__c.field-meta.xml
<CustomField>
    <fullName>Founded__c</fullName>
    <label>Founded</label>
    <type>Date</type>
</CustomField>