bear-blog/main/default/objects/Account/fields/RootAccountId__c.field-meta.xml
<CustomField>
    <fullName>RootAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Root Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>ChildAccounts</relationshipName>
    <type>Lookup</type>
</CustomField>