bear-blog/main/default/objects/Account/validationRules/Demo_Description_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Demo_Description_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Description) &lt; 10</errorConditionFormula>
    <errorDisplayField>Description</errorDisplayField>
    <errorMessage>Say a bit more please..</errorMessage>
</ValidationRule>